--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,2 +1,3 @@
 version = 0.0.0
 author = Kirill Grishin
+weatherSPb = https://api.darksky.net/forecast/dec3d9a54749e6ef14d9c6a7d3e15173/59.9386,30.3141,%d?exclude=hourly,daily,flags&units=auto
